simplified print functionality by using print-js. Added additional smaller print icon for correct icon sizing on mobile devices

--- a/src/PdfRendererControls.scss
+++ b/src/PdfRendererControls.scss
@@ -247,7 +247,7 @@
 
           @media screen and (-webkit-min-device-pixel-ratio: 2),
             screen and (min-resolution: 2dppx) {
-            content: url('assets/toolbarButton-print.png');
+            content: url('assets/toolbarButton-print@2x.png');
             transform: scale(0.5);
             top: -5px;
             left: -1px;
